AC_INIT([e2openplugin-InfoBarTunerState],[4.0.3],[https://github.com/betonme/e2openplugin-InfoBarTunerState/issues])
AM_INIT_AUTOMAKE([foreign])

AC_PATH_PROG(MSGFMT, msgfmt, AC_MSG_ERROR(Could not find msgfmt))
AM_PATH_PYTHON

AC_CONFIG_FILES([
Makefile
meta/Makefile
po/Makefile
src/Makefile
src/icons/Makefile
src/icons_fullhd/Makefile
src/Handler/Makefile
])
AC_OUTPUT
